--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "particle-bg": "^0.5.0",
     "react": "^18.3.1",
     "react-background-image": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.239",
     "react-router-dom": "^6.26.2",
-    "tailwind": "^4.0.0"
+    "react-tsparticles": "^2.12.2",
+    "tailwind": "^4.0.0",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
+    "esbuild": "^0.24.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -31,6 +37,6 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
-    "vite": "^5.4.3"
+    "vite": "^5.4.8"
   }
 }
