--- a/nodetests/package.json
+++ b/nodetests/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "script.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
