--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "particle-bg": "^0.5.0",
     "react": "^18.3.1",
     "react-background-image": "^2.0.1",
