--- a/face_ecognition_api/package.json
+++ b/face_ecognition_api/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt-nodejs": "^0.0.3",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "knex": "^3.1.0",
