the code works the issue was the way i deployed and all

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.239",
     "react-router-dom": "^6.28.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "react-tsparticles": "^2.12.2",
     "tailwind": "^4.0.0",
