--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-background-image": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.239",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "react-tsparticles": "^2.12.2",
+    "redux": "^5.0.1",
     "tailwind": "^4.0.0",
     "tsparticles": "^3.5.0"
   },
